# RAG-Ingestion-Engine

./: .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
DOCS/: DOCUMENTATION_MAP.md  PROJECT_CONFIG_OVERVIEW.md
DOCS/ARCHITECTURE/: adr-008-python-version-lock.md
DOCS/DESIGN/: Design Principles.md  document-artifacts-and-lineage.md
DOCS/DEVELOPMENT/: TESTING_STRATEGY.md
DOCS/USAGE/: INGESTION_SERVICE_GUIDE.md
docs-archive/: PROJECT_PLAN.md
migrations/: env.py
migrations/versions/: 20251229_add_vectors_table.py  bb0f22648df9_create_ingestion_requests_table.py
src/ingestion_service/: Dockerfile  main.py  sample_test.py  test_db_connection.py
src/ingestion_service/api/: errors.py
src/ingestion_service/core/: config.py  database_session.py  db.py  headless_ingest.py  models.py  pipeline.py  status_manager.py
src/ingestion_service/ui/: gradio_app.py
status/: Current_status_20251218.md  Current_status_20260110_v1.md
tests/: conftest_db.py  test_contract_openapi.py
tests/api/: test_ingest_integration.py  test_ingest_persistence.py  test_ingest_status.py
tests/core/: test_embedding_correctness.py  test_headless_ingest.py  test_ingest_pdf_file_synthetic.py  test_ingest_pdf_file_synthetic_2.py  test_pipeline.py  test_pipeline_with_embedder.py
tests/integration/: test_ingest_pdf_file_real.py  test_ingest_text_file.py
tests/vectorstore/: test_memory_store.py  test_pgvector_schema_validation.py  test_pgvector_search.py  test_pgvector_store.py
volumes/ingestion-db/: postmaster.pid
(+69 files in other folders)
